# pyTrader

./: .gitignore  LICENSE  README.md  pyproject.toml
algorithm/: __init__.py  base.py  ma_crossover.py  pairs_trading.py  portfolio_rebalance.py
backtest/: __init__.py  engine.py  metrics.py  report.py
dashboard/: app.py
dashboard/assets/: style.css
data/: __init__.py  loader.py
doc/: design.md
mcp_server/: server.py
notebook/: 01_ma_crossover.ipynb  02_pairs_trading.ipynb  03_portfolio_rebalance.ipynb  04_custom_algorithm.ipynb
tests/: test_engine.py  test_loader.py  test_ma_crossover.py  test_mcp_server.py  test_metrics.py  test_pairs_trading.py  test_portfolio_rebalance.py
