[project]
name = "pytrader"
version = "0.1.0"
description = "A lightweight, comprehensive algorithmic trading and backtesting toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2",
    "plotly>=5.20",
    "dash>=2.17",
    "pydantic>=2.0",
    "mcp>=1.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
notebook = ["jupyter>=1.0", "nbformat>=5.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["algorithm*", "data*", "backtest*", "dashboard*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
